<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.logicalcliff.esppcalculator.MainActivity">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="13"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fair Market Value"
                    android:id="@+id/fmv_label"
                    android:layout_column="0"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_row="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fmv"
                    android:hint="@string/fmv_def"
                    android:numeric="decimal"
                    android:inputType="numberDecimal"
                    android:text="@string/fmv_def"
                    android:filterTouchesWhenObscured="false"
                    android:ems="5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subscription Price"
                    android:id="@+id/subprice_label"
                    android:layout_below="@+id/fmv"
                    android:layout_toLeftOf="@+id/submit"
                    android:layout_toStartOf="@+id/submit"
                    android:layout_row="1"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="5"
                    android:id="@+id/subprice"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="@string/sub_price_def"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:numeric="decimal"
                    android:text="@string/sub_price_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Discount (%)"
                    android:id="@+id/discount_label"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="15"
                    android:layout_row="2"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="5"
                    android:id="@+id/discount"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="15"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:numeric="decimal"
                    android:text="@string/discount_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sale Price"
                    android:id="@+id/sale_price_label"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:hint="@string/sale_price_def" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:id="@+id/sale_price"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="15"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:numeric="decimal"
                    android:inputType="numberDecimal"
                    android:text="@string/sale_price_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ordinary Income Tax Rate"
                    android:id="@+id/tax_rate_label"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="15"
                    android:layout_row="4"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:id="@+id/tax_rate"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="@string/income_tax_rate_def"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:numeric="decimal"
                    android:inputType="numberDecimal"
                    android:text="@string/income_tax_rate_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Capital gain rate %"
                    android:id="@+id/cap_gain_rate_label"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="15"
                    android:layout_row="5"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:id="@+id/cap_gain_rate"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="@string/cap_rate_def"
                    android:layout_row="5"
                    android:layout_column="1"
                    android:numeric="decimal"
                    android:inputType="numberDecimal"
                    android:text="@string/cap_rate_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number of Shares"
                    android:id="@+id/num_shares_label"
                    android:layout_column="0"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_row="6" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:id="@+id/num_shares"
                    android:layout_below="@+id/subprice_label"
                    android:layout_alignLeft="@+id/subprice_label"
                    android:layout_alignStart="@+id/subprice_label"
                    android:hint="@string/num_share_def"
                    android:layout_row="6"
                    android:layout_column="1"
                    android:numeric="signed"
                    android:inputType="numberDecimal"
                    android:text="@string/num_share_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grant_date_label"
                    android:id="@+id/grant_date_label" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="5"
                    android:id="@+id/grant_date"
                    android:hint="@string/grant_date_def"
                    android:text="@string/grant_date_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_date_label"
                    android:id="@+id/purchase_date_label" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="5"
                    android:id="@+id/purchase_date"
                    android:autoText="false"
                    android:hint="@string/purchase_date_def"
                    android:text="@string/purchase_date_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_date_label"
                    android:id="@+id/sale_date_label" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="5"
                    android:id="@+id/sale_date"
                    android:hint="@string/sale_date_def"
                    android:text="@string/sale_date_def" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/disposition_type"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Submit"
                    android:id="@+id/submit"
                    android:layout_below="@+id/fmv"
                    android:layout_centerHorizontal="true"
                    android:onClick="onSubmit"
                    android:nestedScrollingEnabled="false" />

            </GridLayout>
        </ScrollView>
    </HorizontalScrollView>

</RelativeLayout>
